--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,10 +1,10 @@
 <% include header %>
-<!-- Container fluid  -->
-            <!-- ============================================================== -->
-            <div class="container-fluid">
-                <!-- ============================================================== -->
-                <!-- Sales chart -->
-                <!-- ============================================================== -->
+    <!-- Container fluid  -->
+
+    <section class="container-fluid">
+        <div class="card ">
+            <div class="card-body">
+                <h4 class="card-title">Dashboard</h4>
                 <div class="row">
                     <div class="col-12">
                         <div class="card">
@@ -16,8 +16,13 @@
                                     <!-- col -->
                                     <div class="col-lg-3 col-md-6">
                                         <div class="d-flex align-items-center">
-                                            <div class="m-r-10"><span class="text-orange display-5"><i class="mdi mdi-wallet"></i></span></div>
-                                            <div><span>Wallet Balance</span>
+                                            <div class="m-r-10">
+                                                <span class="text-orange display-5">
+                                                    <i class="mdi mdi-wallet"></i>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <span>Wallet Balance</span>
                                                 <h3 class="font-medium m-b-0">$3,567.53</h3>
                                             </div>
                                         </div>
@@ -26,8 +31,13 @@
                                     <!-- col -->
                                     <div class="col-lg-3 col-md-6">
                                         <div class="d-flex align-items-center">
-                                            <div class="m-r-10"><span class="text-cyan display-5"><i class="mdi mdi-star-circle"></i></span></div>
-                                            <div><span>Referral Earnings</span>
+                                            <div class="m-r-10">
+                                                <span class="text-cyan display-5">
+                                                    <i class="mdi mdi-star-circle"></i>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <span>Referral Earnings</span>
                                                 <h3 class="font-medium m-b-0">$769.08</h3>
                                             </div>
                                         </div>
@@ -36,17 +46,28 @@
                                     <!-- col -->
                                     <div class="col-lg-3 col-md-6">
                                         <div class="d-flex align-items-center">
-                                            <div class="m-r-10"><span class="text-info display-5"><i class="mdi mdi-shopping"></i></span></div>
-                                            <div><span>Estimate Sales</span>
-                                                <h3 class="font-medium m-b-0">5489</h3></div>
+                                            <div class="m-r-10">
+                                                <span class="text-info display-5">
+                                                    <i class="mdi mdi-shopping"></i>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <span>Estimate Sales</span>
+                                                <h3 class="font-medium m-b-0">5489</h3>
+                                            </div>
                                         </div>
                                     </div>
                                     <!-- col -->
                                     <!-- col -->
                                     <div class="col-lg-3 col-md-6">
                                         <div class="d-flex align-items-center">
-                                            <div class="m-r-10"><span class="text-primary display-5"><i class="mdi mdi-currency-usd"></i></span></div>
-                                            <div><span>Earnings</span>
+                                            <div class="m-r-10">
+                                                <span class="text-primary display-5">
+                                                    <i class="mdi mdi-currency-usd"></i>
+                                                </span>
+                                            </div>
+                                            <div>
+                                                <span>Earnings</span>
                                                 <h3 class="font-medium m-b-0">$23,568.90</h3>
                                             </div>
                                         </div>
@@ -57,10 +78,10 @@
                         </div>
                     </div>
                 </div>
-                
-             
             </div>
-            <!-- ============================================================== -->
-            <!-- End Container fluid  -->
+        </div>
+    </section>
+    <!-- ============================================================== -->
+    <!-- End Container fluid  -->
 
-<% include footer %>
+    <% include footer %>
