--- a/views/header.ejs
+++ b/views/header.ejs
@@ -139,7 +139,7 @@
                                             <h4 class="m-b-0" style="text-transform: capitalize;">
                                                 <%= request.session.__fullName %>
                                             </h4>
-                                            <p class=" m-b-0"><%= request.session.__fullName %></p>
+                                            <p class=" m-b-0"><%= request.session.__email %></p>
                                         </div>
                                     </div>
                                     <a class="dropdown-item" href="javascript:void(0)">
@@ -174,11 +174,7 @@
                                 <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Personal</span></li>
                                 
                                 <li class="sidebar-item"> <a href="/company" class="sidebar-link waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-hospital-building"></i><span class="hide-menu">Clinic </span></a></li>
-                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Users </span></a>
-                                    <ul aria-expanded="false" class="collapse  first-level">
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> Add </span></a></li>
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> View All </span></a></li>
-                                    </ul>
+                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/users" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Users </span></a>
                                 </li>
                                 <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-tie"></i><span class="hide-menu">Doctors </span></a>
                                     <ul aria-expanded="false" class="collapse  first-level">
