--- a/views/header.ejs
+++ b/views/header.ejs
@@ -176,11 +176,7 @@
                                 <li class="sidebar-item"> <a href="/company" class="sidebar-link waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-hospital-building"></i><span class="hide-menu">Clinic </span></a></li>
                                 <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/users" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Users </span></a>
                                 </li>
-                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-tie"></i><span class="hide-menu">Doctors </span></a>
-                                    <ul aria-expanded="false" class="collapse  first-level">
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> Add </span></a></li>
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> View All </span></a></li>
-                                    </ul>
+                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/doctors" aria-expanded="false"><i class="mdi mdi-tie"></i><span class="hide-menu">Doctors </span></a>                                    
                                 </li>
                                 <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-card-details"></i><span class="hide-menu">Patients </span></a>
                                     <ul aria-expanded="false" class="collapse  first-level">
