--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,65 +1,66 @@
 <footer class="footer text-center">
-    Powerd By <a href="https://github.com/cmubeenali/AcuMS">EKLAVYA</a>.
+    Powerd By
+    <a href="https://github.com/cmubeenali/AcuMS">EKLAVYA</a>.
 </footer>
-          <!-- ============================================================== -->
-          <!-- End footer -->
-          <!-- ============================================================== -->
-      </div>
-      <!-- ============================================================== -->
-      <!-- End Page wrapper  -->
-      <!-- ============================================================== -->
-  </div>
-  <!-- ============================================================== -->
-  <!-- End Wrapper -->
-  <!-- ============================================================== -->
-  <!-- ============================================================== -->
-  
-  <!-- <div class="chat-windows"></div> -->
-  <!-- ============================================================== -->
-  <!-- All Jquery -->
-  <!-- ============================================================== -->
-  <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
-  <!-- Bootstrap tether Core JavaScript -->
-  <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
-  <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-  <!-- apps -->
-  <script src="/assets/js/app.min.js"></script>
-  <script src="/assets/js/app.init.horizontal.js"></script>
-  <script src="/assets/js/app-style-switcher.horizontal.js"></script>
-  <!-- slimscrollbar scrollbar JavaScript -->
-  <script src="/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-  <script src="/assets/extra-libs/sparkline/sparkline.js"></script>
-  <!--Wave Effects -->
-  <script src="/assets/js/waves.js"></script>
-  <!--Menu sidebar -->
-  <script src="/assets/js/sidebarmenu.js"></script>
-  <!--Custom JavaScript -->
-  <script src="/assets/custom.min.js"></script>
-  <!--This page JavaScript -->
-  <!--chartis chart-->
-  <!-- <script src="/assets/libs/chartist/dist/chartist.min.js"></script> -->
-  <!-- <script src="/assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script> -->
-  <!--c3 charts -->
-  <script src="/assets/extra-libs/c3/d3.min.js"></script>
-  <script src="/assets/extra-libs/c3/c3.min.js"></script>
-  <!--chartjs -->
-  <script src="/assets/libs/chart.js/dist/Chart.min.js"></script>
+<!-- ============================================================== -->
+<!-- End footer -->
+<!-- ============================================================== -->
+</div>
+<!-- ============================================================== -->
+<!-- End Page wrapper  -->
+<!-- ============================================================== -->
+</div>
+<!-- ============================================================== -->
+<!-- End Wrapper -->
+<!-- ============================================================== -->
+<!-- ============================================================== -->
 
-  <!-- Select2 -->
-  <script src="/assets/libs/select2/dist/js/select2.full.min.js"></script>
-  <script src="/assets/libs/select2/dist/js/select2.min.js"></script>
-  <script src="/assets/js/pages/forms/select2/select2.init.js"></script>
-  <script src="/assets/libs/toastr/build/toastr.min.js"></script>
-  <script src="/assets/extra-libs/toastr/toastr-init.js"></script>
-  <script src="/assets/libs/swal2/dist/sweetalert2.all.min.js"></script>
-  <script src="/assets/libs/swal2/dist/sweetalert2.min.js"></script>
-  <script src="/assets/extra-libs/DataTables/datatables.min.js"></script>
-  <script src="/assets/js/pages/datatable/datatable-basic.init.js"></script>
-  <script src="/assets/libs/moment_new/moment.js"></script>
-  <!-- <script src="/assets/libs/flatpickr/dist/flatpickr.min.js"></script> -->
-  <script src="/assets/libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<!-- <div class="chat-windows"></div> -->
+<!-- ============================================================== -->
+<!-- All Jquery -->
+<!-- ============================================================== -->
+<script src="/assets/libs/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap tether Core JavaScript -->
+<script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
+<script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- apps -->
+<script src="/assets/js/app.min.js"></script>
+<script src="/assets/js/app.init.horizontal.js"></script>
+<script src="/assets/js/app-style-switcher.horizontal.js"></script>
+<!-- slimscrollbar scrollbar JavaScript -->
+<script src="/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+<script src="/assets/extra-libs/sparkline/sparkline.js"></script>
+<!--Wave Effects -->
+<script src="/assets/js/waves.js"></script>
+<!--Menu sidebar -->
+<script src="/assets/js/sidebarmenu.js"></script>
+<!--Custom JavaScript -->
+<script src="/assets/custom.min.js"></script>
+<!--This page JavaScript -->
+<!--chartis chart-->
+<!-- <script src="/assets/libs/chartist/dist/chartist.min.js"></script> -->
+<!-- <script src="/assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script> -->
+<!--c3 charts -->
+<script src="/assets/extra-libs/c3/d3.min.js"></script>
+<script src="/assets/extra-libs/c3/c3.min.js"></script>
+<!--chartjs -->
+<script src="/assets/libs/chart.js/dist/Chart.min.js"></script>
 
-  <!-- start - This is for export functionality only -->
+<!-- Select2 -->
+<script src="/assets/libs/select2/dist/js/select2.full.min.js"></script>
+<script src="/assets/libs/select2/dist/js/select2.min.js"></script>
+<script src="/assets/js/pages/forms/select2/select2.init.js"></script>
+<script src="/assets/libs/toastr/build/toastr.min.js"></script>
+<script src="/assets/extra-libs/toastr/toastr-init.js"></script>
+<script src="/assets/libs/swal2/dist/sweetalert2.all.min.js"></script>
+<script src="/assets/libs/swal2/dist/sweetalert2.min.js"></script>
+<script src="/assets/extra-libs/DataTables/datatables.min.js"></script>
+<script src="/assets/js/pages/datatable/datatable-basic.init.js"></script>
+<script src="/assets/libs/moment_new/moment.js"></script>
+<!-- <script src="/assets/libs/flatpickr/dist/flatpickr.min.js"></script> -->
+<script src="/assets/libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
+<!-- start - This is for export functionality only -->
 <script src="/assets/cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
 <script src="/assets/cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
 <script src="/assets/cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
@@ -70,8 +71,8 @@
 
 
 
-  <script>
-      toastr.options = {
+<script>
+    toastr.options = {
         "closeButton": true,
         "debug": false,
         "newestOnTop": false,
@@ -87,5 +88,16 @@
         "hideEasing": "linear",
         "showMethod": "fadeIn",
         "hideMethod": "fadeOut"
-      }
-  </script>
+    }
+
+    function formattedDate(d) {
+        let month = String(d.getMonth() + 1);
+        let day = String(d.getDate());
+        const year = String(d.getFullYear());
+
+        if (month.length < 2) month = '0' + month;
+        if (day.length < 2) day = '0' + day;
+
+        return `${year}-${month}-${day}`;
+    }
+</script>
