--- a/views/header.ejs
+++ b/views/header.ejs
@@ -142,7 +142,7 @@
                                             <p class=" m-b-0"><%= request.session.__email %></p>
                                         </div>
                                     </div>
-                                    <a class="dropdown-item" href="javascript:void(0)">
+                                    <a class="dropdown-item" href="/user/<%=request.session.__userId%>" >
                                         <i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
                                     <a class="dropdown-item" href="/login">
                                         <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
@@ -172,32 +172,14 @@
                             <ul id="sidebarnav">
                                 <!-- User Profile-->
                                 <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Personal</span></li>
-                                
+                                <li class="sidebar-item"> <a href="/dashboard" class="sidebar-link waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard </span></a></li>
                                 <li class="sidebar-item"> <a href="/company" class="sidebar-link waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-hospital-building"></i><span class="hide-menu">Clinic </span></a></li>
                                 <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/users" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Users </span></a>
                                 </li>
                                 <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/doctors" aria-expanded="false"><i class="mdi mdi-tie"></i><span class="hide-menu">Doctors </span></a>                                    
                                 </li>
-                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-account-card-details"></i><span class="hide-menu">Patients </span></a>
-                                    <ul aria-expanded="false" class="collapse  first-level">
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> Add </span></a></li>
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> View All </span></a></li>
-                                    </ul>
+                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="/diagnosis" aria-expanded="false"><i class="mdi mdi-stethoscope"></i><span class="hide-menu">Diagnosis </span></a>
                                 </li>
-                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-folder-multiple"></i><span class="hide-menu">Patient Directory </span></a></li>
-                                <li class="sidebar-item"> <a class="sidebar-link  waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-stethoscope"></i><span class="hide-menu">Diagnosis </span></a>
-                                    <ul aria-expanded="false" class="collapse  first-level">
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> Add </span></a></li>
-                                        <li class="sidebar-item"><a href="" class="sidebar-link"><i class=""></i><span class="hide-menu"> View All </span></a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Tables</span></li>
-                               
-                                <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Charts</span></li>
-                                
-                                <li class="nav-small-cap"><i class="mdi mdi-dots-horizontal"></i> <span class="hide-menu">Sample Pages</span></li>
-                                
-                               
                             </ul>
                         </nav>
                         <!-- End Sidebar navigation -->
