--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer text-center">
-    Powerd By
-    <a href="https://github.com/cmubeenali/AcuMS">EKLAVYA</a>.
+    Powerd by
+    <a href="#">EKLAVYA</a>.
 </footer>
 <!-- ============================================================== -->
 <!-- End footer -->
