--- a/views/users.ejs
+++ b/views/users.ejs
@@ -93,7 +93,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="" class="control-label">userType</label>
+                                        <label for="" class="control-label">User Type</label>
                                         <div class="form-group">
                                             <select name="userType" id="userType" class="select2" style="width: 100%;">
                                                 <option value="0">--Select--</option>
